# emotional-manager

./: CMakeLists.txt  README.md  action_manager.py  emotional_manager.py  package.xml  valence_arousal_map.py
include/: interaction_settings.py~
launch/: nao_emotional.launch  nao_learning.launch~
nodes/: Hard.csv  IRT.py  action_manager.py  emotional_manager.py  engagement_map.py  model.r  space_tf_manager.py  valence_arousal_map.py
src/: vision.cpp
