<?xml version="1.0"?>
<package>
  <name>emotional_manager</name>
  <version>0.1.0</version>
  <description>A package for nodes which allow to control the emotion output of nao as well as the interaction with the letter_learning_interaction package.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="ferran.garcia12@gmail.com">Ferran Garcia</maintainer>

  <license>MIT</license>

  <author email="ferran.garcia12@gmail.com">Ferran Garcia</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
